--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "deploy": "ts-node src/deploy-commands.ts"
+    "deploy": "ts-node src/deploy-commands.ts",
+    "deploy-commands": "node dist/deploy-commands.js"
   },
   "dependencies": {
     "discord.js": "^14.25.1",
@@ -20,5 +21,8 @@
     "@types/node-cron": "^3.0.11",
     "typescript": "^5.3.3",
     "ts-node": "^10.9.2"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
