--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "deploy-commands": "node dist/deploy-commands.js"
   },
   "dependencies": {
+    "@types/express": "^5.0.6",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "node-cron": "^4.2.1",
     "rss-parser": "^3.13.0"
   },
